--- a/app/assets/stylesheets/helpers/hub/data.scss
+++ b/app/assets/stylesheets/helpers/hub/data.scss
@@ -1,4 +1,9 @@
 // Styling particular to the hub controller and views
+:root {
+  --data-shared-bg: #e5d2be;
+  --data-default-bg: #5d9ece;
+  --data-application-defined-bg: #c38a8a;
+}
 
 #data_cards {
   display: flex;
