Fix actions, add clean and reload buttons #4142

--- a/app/assets/stylesheets/base/column_layouts.scss
+++ b/app/assets/stylesheets/base/column_layouts.scss
@@ -113,6 +113,10 @@ http://css-tricks.com/snippets/css/a-guide-to-flexbox/
   flex: 1 auto;
 }
 
+.flex-auto {
+  flex: auto;
+}
+
 @media all and (min-width: 400px) {
   .item {
     flex: 1 auto;
