--- a/app/views/tasks/gis/simplemappr/index.html.erb
+++ b/app/views/tasks/gis/simplemappr/index.html.erb
@@ -1,4 +1,5 @@
 <h1> Simplemappr table </h1>
+<p> Only Collection Objects with geographic data are included here. </p>
 <em> Paste the copied table into a text file, name it your_data.txt. The file should load at simplemappr. </em>
 <br/>
 <br/>
@@ -10,6 +11,6 @@
 <% else %>
   <%= copy_table_to_clipboard('div#simplemappr') %>
   <div id="simplemappr">
-    <%= table_from_csv( d ) %> 
+    <%= table_from_csv( d ) %>
   </div>
 <% end %>
