--- a/app/views/tasks/gis/simplemappr/index.html.erb
+++ b/app/views/tasks/gis/simplemappr/index.html.erb
@@ -1,10 +1,14 @@
 <h1> Simplemappr table </h1>
-<p> Only Collection Objects with geographic data are included here. </p>
+<p> Only selected Collection Objects with geographic data are included here. </p>
 <em> Paste the copied table into a text file, name it your_data.txt. The file should load at simplemappr. </em>
 <br/>
 <br/>
 
 <% d = simple_mappr_data(params) %>
+
+<% if d&.headers.length > 13 %>
+  <%= tag.div("Only the first 13 of the #{d.headers.length} columns will be loaded by SimpleMappr.", class: [:feedback, 'feedback-warning'])  %>
+<% end %>
 
 <% if d.nil? %>
   <%= tag.div('No data, or > 10k rows returned.', class: [:feedback, 'feedback-warning'])  %>
