Add sticky navbar for browse nomenclature and collecting event

--- a/app/assets/stylesheets/base/feedback.scss
+++ b/app/assets/stylesheets/base/feedback.scss
@@ -127,3 +127,15 @@
   @extend .small_space;
   background-color: $color-secondary-1-2;
 }
+
+.sticky-navbar {
+  box-sizing: border-box;
+  min-height: auto;
+}
+
+.sticky-navbar-fixed {
+  position: fixed;
+  box-sizing: border-box;
+  top: 0;
+  z-index: 1001;
+}
