--- a/app/views/tasks/nomenclature/browse/index.html.erb
+++ b/app/views/tasks/nomenclature/browse/index.html.erb
@@ -1,39 +1,41 @@
 <h1 class="task_header"> Browse nomenclature and classification </h1>
 
 <div id="browse-nomenclature" class="browse-view" data-taxon-id="<%= @taxon_name.id %>">
-  <div class="panel content">
-    <div class="flex-separate middle">
+  <div>
+    <div class="panel content sticky-navbar">
+      <div class="flex-separate middle">
 
-      <div class="middle">
-        <div
-            class="separate-right"
-            id="vue-browse-nomenclature-search"></div>
+        <div class="middle">
+          <div
+              class="separate-right"
+              id="vue-browse-nomenclature-search"></div>
 
-        <div class="separate-left separate-right">
-          <%= render('/taxon_names/breadcrumb_navigator', taxon_name: @taxon_name, target: :browse_nomenclature_task_path) -%>
+          <div class="separate-left separate-right">
+            <%= render('/taxon_names/breadcrumb_navigator', taxon_name: @taxon_name, target: :browse_nomenclature_task_path) -%>
+          </div>
         </div>
-      </div>
 
-      <span class="right_float flex-separate middle">
-        <span class="margin-medium-right">OTU</span>
-        <div class="square-brackets">
-          <ul class="no_bullets context-menu">
-            <li><%= radial_annotator_otu(@taxon_name) %></li>
-            <li><%= browse_otu_link(@taxon_name) %></li>
-            <li><%= otus_radial_disambiguate(@taxon_name) %></li>
+        <span class="right_float flex-separate middle">
+          <span class="margin-medium-right">OTU</span>
+          <div class="square-brackets">
+            <ul class="no_bullets context-menu">
+              <li><%= radial_annotator_otu(@taxon_name) %></li>
+              <li><%= browse_otu_link(@taxon_name) %></li>
+              <li><%= otus_radial_disambiguate(@taxon_name) %></li>
+            </ul>
+          </div>
+          <ul class="context-menu">
+            <li><%= radial_annotator(@taxon_name, annotations_exist(@taxon_name)) %></li>
+            <li><%= confidence_default_icon(@taxon_name) %></li>
+            <li><%= tag_default_icon(@taxon_name) %></li>
+            <li><%= pin_item_to_pinboard_link(@taxon_name, sessions_current_user) %></li>
+            <li>
+              <a class="circle-button btn-edit edit-taxon-name" href="<%= new_taxon_name_task_path(taxon_name_id: @taxon_name.id) %>"></a>
+            </li>
+            <li><%= radial_navigation_tag(@taxon_name) %></li>
           </ul>
-        </div>
-        <ul class="context-menu">
-          <li><%= radial_annotator(@taxon_name, annotations_exist(@taxon_name)) %></li>
-          <li><%= confidence_default_icon(@taxon_name) %></li>
-          <li><%= tag_default_icon(@taxon_name) %></li>
-          <li><%= pin_item_to_pinboard_link(@taxon_name, sessions_current_user) %></li>
-          <li>
-            <a class="circle-button btn-edit edit-taxon-name" href="<%= new_taxon_name_task_path(taxon_name_id: @taxon_name.id) %>"></a>
-          </li>
-          <li><%= radial_navigation_tag(@taxon_name) %></li>
-        </ul>
-      </span>
+        </span>
+      </div>
     </div>
   </div>
 
