Add move button to citation and depiction list in radial annotator #4217

--- a/app/assets/stylesheets/base/navigation.scss
+++ b/app/assets/stylesheets/base/navigation.scss
@@ -292,3 +292,15 @@ a,
 .overflow-y-scroll {
   overflow-y: scroll;
 }
+
+.overflow-visible {
+  overflow: visible;
+}
+
+.overflow-x-visible {
+  overflow-y: visible;
+}
+
+.overflow-y-visible {
+  overflow-y: visible;
+}
