Add batch endpoint for ProtocolRelationship.
Add is_machine_output to Protocol.

--- a/app/views/protocols/_attributes.html.erb
+++ b/app/views/protocols/_attributes.html.erb
@@ -12,3 +12,9 @@
   <strong>Description:</strong>
   <%= @protocol.description %>
 </p>
+
+<p>
+  <strong>Is machine output:</strong>
+  <%= @protocol.is_machine_output %>
+</p>
+
