--- a/app/views/protocols/_form.html.erb
+++ b/app/views/protocols/_form.html.erb
@@ -21,6 +21,12 @@
       </div>
     </div>
 
+    <div class="field">
+      <%= f.label :is_machine_output %>
+      <br>
+      <%= f.check_box :is_machine_output %>
+    </div>
+
     <div class="actions">
       <%= f.submit %>
     </div>
