Correct 'dwc_occurence' misspellings of consequence

--- a/app/views/tasks/accessions/report/dwc/_table_row.html.erb
+++ b/app/views/tasks/accessions/report/dwc/_table_row.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag(:tr, class: :contextMenuCells) do -%>
-  <% CollectionObject::DwcExtensions::DWC_OCCURENCE_MAP.each_key do |k| -%>
+  <% CollectionObject::DwcExtensions::DWC_OCCURRENCE_MAP.each_key do |k| -%>
     <td> <%= o.catalogNumber -%> </td>
     <td> <%= o.family %></td>
     <td> <%= o.dwc_family -%> </td>
