Add conveyance panel to browse ce #4169

--- a/app/views/tasks/collecting_events/browse/index.html.erb
+++ b/app/views/tasks/collecting_events/browse/index.html.erb
@@ -54,8 +54,8 @@
       </div>
     </div>
 
-    <div class="item item2 separate-bottom">
-      <div class="flexbox separate-bottom">
+    <div class="item item2 gap-medium">
+      <div class="flexbox ">
         <div class="panel separate-left separate-right">
           <div id="browse-nomenclature-taxon-name" class="content subtitle filter middle">
             <%= content_tag(:p, collecting_event_tag(@collecting_event), class: 'item center_text name', style: 'line-height: 23px;') -%>
@@ -115,16 +115,27 @@
         </div>
       </div>
 
-      <% if @collecting_event.depictions.any? %>
-        <div>
-          <div id="depiction-panel" class="panel content separate-left">
-            <h2> Depictions </h2>
-            <div class="horizontal-left-content flexbox">
-              <%= thumb_list_tag(@collecting_event) -%>
-            </div>
+    <% if @collecting_event.depictions.any? %>
+      <div>
+        <div id="depiction-panel" class="panel content separate-left">
+          <h2> Depictions </h2>
+          <div class="horizontal-left-content flexbox">
+            <%= thumb_list_tag(@collecting_event) -%>
           </div>
         </div>
-      <% end %>
+      </div>
+    <% end %>
+
+    <% if @collecting_event.conveyances.any? %>
+      <div>
+        <div id="conveyance-panel" class="panel content separate-left">
+          <h2>Conveyances</h2>
+          <div class="flex-col gap-medium">
+            <%= conveyances_list_tag(@collecting_event) -%>
+          </div>
+        </div>
+      </div>
+    <% end %>
 
       <div>
         <%= dwc_table(@collecting_event.collection_objects.limit(500)) -%>
